--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body {
 }
 
 #root {
-  min-height: 100dvh;
+  height: 100svh;
   display: flex;
   flex-direction: column;
 }
